# VideoSensorApi2

./: .gitignore  build.gradle  import-summary.txt
Application/: CMakeLists.txt  build.gradle
Application/src/main/cpp/: imageProcessing.cpp  imageTransformer.cpp  imageTransformer.h  imageTransformer_p.cpp  imageTransformer_p.h  utils.cpp  utils.h
Application/src/main/java/com/example/android/camera2video/: Camera2VideoFragment.java  CameraActivity.java  CodecImage.java  CodecUtils.java  ExtractedImage.java  FrameOptions.java  GaussianSmooth.java  GyroIntegrator.java  GyroIntegratorLinear.java  GyroIntegratorQuaternion.java  ImageJNI.java  ImageUtils.java  ImageWarp.java  TransformationMatrix.java  VideoEncoder.java  VideoProcessor.java
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/stabilizer/stabilizer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: utils.cpp
app/src/main/java/com/stabilizer/stabilizer/: AutoFitTextureView.java  Camera2VideoFragment.java  CodecImage.java  CodecUtils.java  ImageUtils.java  MainActivity.java  MyStringBuffer.java  VideoEncoder.java
app/src/main/res/layout/: activity_main.xml  fragment_camera2_video.xml
app/src/main/res/layout-land/: fragment_camera2_video.xml
app/src/main/res/values/: base-strings.xml
app/src/test/java/com/stabilizer/stabilizer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
